kubernetes-manifests/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trombones-deployment
  namespace: web-app
spec:
  replicas: 6 # You can adjust the number of replicas as needed
  selector:
    matchLabels:
      app: trombones
  template:
    metadata:
      labels:
        app: trombones
    spec:
      containers:
        - name: trombones
          image: yash5090/trombones:latest # Replace with the actual image tag
          ports:
            - containerPort: 5000 # Replace with the port your Tetris game listens on
          volumeMounts:
          - name: trombones-storage
            mountPath: /data  #Mount path inside the container
      volumes:
      - name: trombones-storage
        persistentVolumeClaim:
          claimName: trombones-pvc
