kubernetes-manifests/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: trombones-service
spec:
  selector:
    app: trombones
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
