kubernetes-manifests/kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trombones-ingress
  namespace: web-app
spec:
  rules:
  - host: trombones
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trombones-service
            port:
              number: 5000 #80
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: trombones-service
            port:
              number: 5000 #80
